# sushline

./: COMPATIBILITY.md  Cargo.toml  DESIGN.md  LICENSE-MIT  README.md
history/: Cargo.toml
history/src/: expansion.rs  file.rs  lib.rs
history/tests/: history.rs
readline/: Cargo.toml
readline/src/: bind.rs  config.rs  display.rs  editor.rs  hooks.rs  input.rs  inputrc.rs  lib.rs  prompt.rs  terminal.rs  variables.rs
readline/src/bind/: tests.rs
readline/src/buffer/: mod.rs  render.rs  tests.rs  word.rs
readline/src/command/: completion_cmd.rs  editing.rs  history_nav.rs  kill.rs  misc.rs  mod.rs  movement.rs  named.rs  typed.rs  vi.rs
readline/src/completion/: builtin.rs  display.rs  engine.rs  export.rs  filename.rs  mod.rs  quoting.rs
readline/src/editor/: tests.rs
readline/src/inputrc/: tests.rs
readline/src/keymap/: commands.rs  emacs.rs  mod.rs  parse.rs  tests.rs  vi.rs
readline/src/prompt/: tests.rs
readline/src/state/: completion.rs  kill.rs  mod.rs  repeat.rs  search.rs  undo.rs  vi.rs
readline/src/terminal/: terminfo.rs
readline/tests/: bind_golden.rs  completion.rs  display.rs  editing.rs  history.rs  oracle_harness.rs  signals.rs  variables.rs  vi_mode.rs
readline/tests/common/: mod.rs
src/: lib.rs
