[package]
name = "sushline"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Pure Rust Readline-style line editing and history for Sush"

[workspace]
members = ["history", "readline"]
resolver = "3"

[dependencies]
history = { path = "history" }
readline = { path = "readline" }

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
